fixed analysis text scrollbar issue

--- a/src/components/analysis/analysis.css
+++ b/src/components/analysis/analysis.css
@@ -27,6 +27,7 @@ div.analysis_text {
   margin-bottom: 1rem;
   padding-left: 1rem;
   padding-right: 1rem;
+  padding-bottom: 0.25rem;
   max-height: 45vh;
   max-width: 1000px;
   overflow-y: auto;
@@ -79,7 +80,7 @@ div.error_list_container h2 {
   margin: 1.5rem 0;
   font-family: var(--regular-font);
   text-transform: uppercase;
-  color: red;
+  color: var(--blue);
 }
 div.error_description_container {
   font-family: var(--regular-font);
